# Data-SUITE

./: .gitignore  README.md  pyproject.toml  requirements-no-deps.txt  requirements.txt  setup.cfg
artifacts/: adult_copula_samples.p  adult_copula_samples_10k.p  adult_copula_samples_1k.p  adult_copula_samples_5k.p  synthetic_artifacts.csv
data/: adult.csv  electricity.arff
notebooks/: adult_artefacts_analysis.ipynb  adult_pipeline.ipynb  electric_artefacts_analysis.ipynb  electric_pipeline.ipynb  synthetic_analysis.ipynb  synthetic_pipeline.ipynb
scripts/: process_synthetic.sh  run_adult.sh  run_electric.sh  run_synthetic.sh
src/data/: data_loader.py
src/models/: base_model.py  benchmarks.py  conformal.py  copula.py  ensemble.py  mcd.py  nn_conformal.py  representation.py
src/utils/: data_utils.py  graphics.py  helpers.py  uncertainty_metrics.py
tutorial/: data_suite.py  tutorial_detailed.ipynb  tutorial_simple.ipynb
