[tool.poetry]
name = "Data-SUITE"
version = "0.1.0"
description = "Data-centric identification of in-distribution incongruous examples"
authors = ["Nabeel Seedat"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
