[metadata]
name = Data_SUITE
version = 0.1.0
description = Data-centric identification of in-distribution incongruous examples
long_description = file: README.md
long_description_content_type = text/markdown
url = https://arxiv.org/abs/2202.08836
author = Nabeel Seedat
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
keywords = data-centric AI, data quality, uncertainty

[options]
python_requires = 3.7
